--- a/recovery/root/ueventd.mt6833.rc
+++ b/recovery/root/ueventd.mt6833.rc
@@ -1,3 +1,21 @@
+firmware_directories /etc/firmware/ /odm/firmware/ /vendor/firmware/ /firmware/image/
+uevent_socket_rcvbuf_size 16M
+
+subsystem graphics
+    devname uevent_devpath
+    dirname /dev/graphics
+
+subsystem drm
+    devname uevent_devpath
+    dirname /dev/dri
+
+subsystem input
+    devname uevent_devpath
+    dirname /dev/input
+
+subsystem sound
+    devname uevent_devpath
+
 #change partition permission
 # eMMC only
 /dev/block/mmcblk0                               0660    root    system
