--- a/.github/workflows/PBRP-makefile.yml
+++ b/.github/workflows/PBRP-makefile.yml
@@ -164,8 +164,8 @@ jobs:
       with:
         files: |
           android-recovery/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/${{ env.BUILD_TARGET_NAME }}.img
-        name: PBRP ${{ env.BUILD_DATE }}
-        tag_name: ${{ github.run_id }}
+        name: PBRP 
+        tag_name: PBRP
         body: |
           Build: ${{ github.event.inputs.MANIFEST_BRANCH }}
           Device: [Device Tree/Branch](${{ github.event.inputs.DEVICE_TREE }}/tree/${{ github.event.inputs.DEVICE_TREE_BRANCH }})
