--- a/.github/workflows/TWRP-makefile.yml
+++ b/.github/workflows/TWRP-makefile.yml
@@ -161,8 +161,8 @@ jobs:
       with:
         files: | 
           workspace/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/${{ github.event.inputs.BUILD_TARGET }}.img
-        name: twrp ${{ env.BUILD_DATE }}
-        tag_name: ${{ github.run_id }}
+        name: twrp
+        tag_name: TWRP
         body: |
           Manifest: ${{ github.event.inputs.MANIFEST_BRANCH }}
           Device: ${{ github.event.inputs.DEVICE_NAME }}
