--- a/.github/workflows/PBRP-makefile.yml
+++ b/.github/workflows/PBRP-makefile.yml
@@ -170,7 +170,8 @@ jobs:
           Build: ${{ github.event.inputs.MANIFEST_BRANCH }}
           Device: [Device Tree/Branch](${{ github.event.inputs.DEVICE_TREE }}/tree/${{ github.event.inputs.DEVICE_TREE_BRANCH }})
           Commit: Most recent [commit](${{ github.event.inputs.DEVICE_TREE }}/commit/${{ env.COMMIT_ID }}) during building.
-
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
     - name: Run LDCheck
       if: github.event.inputs.LDCHECK == 'true'
       run: |
